--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">Parent App</string>
+    <string name="app_name">Kawa Demo App</string>
     <string name="kawa_api_key">kawa_RLkNIPN-z3TeWb8AWv089w</string>
+    <string name="welcome">Welcome</string>
+    <string name="start_kawa_map">Start Kawa Map</string>
 </resources>
