--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -4,4 +4,9 @@
     <string name="kawa_api_key">kawa_RLkNIPN-z3TeWb8AWv089w</string>
     <string name="welcome">Selamat Datang</string>
     <string name="start_kawa_map">Mulai Kawa Map</string>
+    <string name="enter_details">Masukkan Detail</string>
+    <string name="name">Nama</string>
+    <string name="address">Alamat</string>
+    <string name="error_name">Silakan masukkan nama</string>
+    <string name="error_address">Silakan masukkan alamat</string>
 </resources>
