--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="kawa_api_key">kawa_RLkNIPN-z3TeWb8AWv089w</string>
     <string name="welcome">Welcome</string>
     <string name="start_kawa_map">Start Kawa Map</string>
+    <string name="enter_details">Enter Details</string>
+    <string name="name">Name</string>
+    <string name="address">Address</string>
+    <string name="error_name">Please enter name </string>
+    <string name="error_address">Please enter address</string>
 </resources>
