--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Kawa Demo App</string>
-    <string name="kawa_api_key">kawa_RLkNIPN-z3TeWb8AWv089w</string>
+
     <string name="welcome">Selamat Datang</string>
     <string name="start_kawa_map">Mulai Kawa Map</string>
     <string name="enter_details">Masukkan Detail</string>
@@ -9,4 +9,6 @@
     <string name="address">Alamat</string>
     <string name="error_name">Silakan masukkan nama</string>
     <string name="error_address">Silakan masukkan alamat</string>
+    <string name="company">Perusahaan</string>
+    <string name="error_company">Silakan Masukkan Nama Perusahaan</string>
 </resources>
